# ns-sli

./: .gdbinit  .mtn-ignore  .simrc  .simrc-genesis  .simrc-ns-sli  Makefile.am  Makefile.am.stuff  Makefile.in  TODO.txt  autoconfig.sh  autogen.sh  config.status  configure  configure.ac  dox.cfg  doxygen.cfg  empty_model.ndf  release-expand.config  tests.config
glue/: Makefile.am
glue/swig/perl/: Makefile.am  SLI.pm  SwiggableSLI.dylib  sli.i  sli_test.pm
glue/swig/perl/SLI/Integrators/: Commands.pm
install/: release.yml
install/deb/: changelog  control  rules
install/osx/PackageMaker.pmdoc/: 01package-contents.xml  01package.xml  index.xml
install/osx/Resources/: Welcome.rtf
install/rpm/: ns-sli.spec
src/: .gdbinit  Makefile  Makefile.BASE  Makefile.am  Makefile.in  config.h  config.h.in  liblist  loadlib.c  main.c
src/c2genesis/: Makefile.am  Makefile.in  c2genesis.c  makestructs.c
src/neurospaces/: Makefile  Makefile.am  Makefile.in  ascfile_struct.h  ascfileactor.c  ascfilelib.g  connect.c  filters.c  globalinterator.h  heccercalloc.c  heccercreate.c  heccerinit.c  heccerreset.c  heccerstep.c  hsolve_struct.h  hsolveactor.c  hsolvelib.g  neurospaces_d@.c  neurospaces_defs.h  neurospaces_ext.h  neurospaces_g@.c  neurospaces_g@.h  neurospaces_l@.c  neurospaces_struct.h  neurospacesfield.c  neurospaceslib.g  neurospacesmodel.c  neurospacesquery.c  neurospacesquery.h  neurospacesread.c  neurospacesreset.c  neurospacessetup.c  neurospacessetup.h  neurospacessupport.c  neurospacessupport.h  new_parser.c  nsasc.c  nscall.c  nscomm.c  nscompartment.c  (+32 more)
src/olf/: Makefile.am  Makefile.in  new_interp.c  olf_struct.h  olflib.g  olfsli.c  tabchannel.c  tmp_olf_struct.h
src/par/: Makefile  Makefile.am  Makefile.in
src/script/: Makefile.am  Makefile.in  eval.c  lex.yy.c  lexical.c  lexical.l  syntax.c  syntax.h  syntax.y
src/shell/: Makefile  Makefile.am  Makefile.in  shell_argv.c  shell_edit.c  shell_env.c  shell_esc.c  shell_exec.c  shell_ext.h  shell_func.c  shell_func_ext.h  shell_hash.c  shell_io.c  shell_misc.c  shell_script.c  shell_setup.c  shell_sh.c  shell_tty.c
src/sim/: Makefile  Makefile.am  Makefile.in  nsim_wildcard.c  sim_access.c  sim_action.c  sim_address.c  sim_base.c  sim_call.c  sim_class.c  sim_clock.c  sim_copy.c  sim_create.c  sim_current.c  sim_delete.c  sim_dump.c  sim_elemlist.c  sim_estack.c  sim_ext.h  sim_extfields.c  sim_func_ext.h  sim_get.c  sim_hash.c  sim_help.c  sim_main.c  sim_map.c  sim_method.c  sim_move.c  sim_msg.c  sim_name.c  sim_neurospaceselement.c  sim_notes.c  sim_nscompartment.c  sim_nsresetheccer.c  sim_object.c  sim_random.c  sim_reset.c  sim_save.c  sim_set.c  sim_show.c  (+5 more)
src/ss/: Makefile  Makefile.am  syntax.y
src/startup/: configrc  defaults.g  minschedule.g  minsimrc-ns-sli  nxsimrc-ns-sli  schedule.g  simrc  simrc-ns-sli  simrc-ns-sli.example
src/sys/: Makefile  Makefile.am
src/util/: Makefile.am  Makefile.in  hash.c  hash.h  jump.c
tests/: command_extractor  introduction.html  neurospaces_harness  neurospaces_harness.ptkdb  run  run.ptkdb  tests.config  tests_2_html  tests_2_html.ptkdb
tests/scripts/: copy.g  createmap1.g  createmap2.g  createmap3.g  createmap4.g  nesting.g  rallpack3-simple.g  reducing.g  tutorial4.g
tests/scripts/PurkM9_model/: .simrc-ns-sli  ACTIVE-main1.g  ACTIVE-soma1.g  CLIMB9.g  CLIMBSPINE9.g  CURRENT9.g  ISPINE9.g  PASSIVE9-current.g  PASSIVE9-current1.g  PASSIVE9-current2.g  PURKINJE_MODEL  Purk2M0.p  Purk2M0s.p  Purk2M0sA.p  Purk2M9.p  Purk2M9_main1.p  Purk2M9_soma.p  Purk2M9s.p  Purk2M9s1.p  Purk2M9s10.p  Purk2M9s14.p  Purk2M9s19.p  Purk2M9s2.p  Purk2M9s25.p  Purk2M9s29.p  Purk2M9s3.p  Purk2M9s37.p  Purk2M9s4.p  Purk2M9s44.p  Purk2M9s45.p  Purk2M9s6.p  Purk2M9s8b.p  Purk2M9sA.p  Purk_chan.g  Purk_chanload.g  Purk_cicomp.g  Purk_cicomp_passive.g  Purk_comp.g  Purk_const.g  Purk_icomp.g  (+7 more)
tests/scripts/basic-g/: addfield.g  ce-test4.g  foreachloop.g  forendloop.g  function_iftest.g  ifelse.g  listcommands.g  listobjects.g  set_neurospaces_field.g  setfield.g
tests/scripts/cuser/: Vm.out  my-simplecell.g  simplecell-spikes.g  tutorial3.notes
tests/scripts/g2-library/: hh_tchan.g
tests/scripts/genesis-2/: copy2.g  copy3.g  copy4.g  getfield.g  hinescell-m.p  ns-create.g  pulsegen-extgate.g  pulsegen-exttrig.g  pulsegen-freerun.g  pulsegen.g  readcell_simple.g  showfield1.g  showfield2.g  showfield3.g  showfield4.g  showfield5.g
tests/scripts/heccer/: ascfile1.g  c1c2p1.g  c1c2p2.g  calloutInjector.g  channel1-nernst1.g  channel2-nernst1.g  double.g  fork3p.g  fork4p1.g  fork4p2.g  fork4p3.g  heccerreset.g  heccerstep.g  pool-feedback.g  pool1-contributors2.g  pool1-nernst.g  pool1.g  pool2.g  single.g  singlea-naf.g  spiker1.g  spiker2.g  springmass.g  springmass1.g  springmass3.g  table-cap.g  table-cat.g  table-k2.g  table-ka.g  table-kc-nodump.g  table-kc.g  table-kdr-nodump.g  table-kdr.g  table-kh.g  table-km.g  table-naf.g  table-nap.g  tensizesp.g  triple.g  vclamp-passive.g
tests/scripts/passive/: double.g  doublep.g  singlep.g
tests/scripts/rallpack1/: cable.g  scale_cable.g
tests/scripts/rallpack3/: axon.g  scale_axon.g
tests/scripts/readcell/: Purk2M9-nospines.p  Purk2M9-spines.p  purk2m9.g  readcell.g  readcell_g_reset.g  readcell_reset.g  readcell_simple.g  readcell_simple2.g
tests/scripts/simplecells/: K_hh_no_tweak_lr.g  K_hh_tweak.g  K_hh_tweak_sr.g  Na_hh_setupalpha_lr.g  protodefs_tweak.g  protodefs_tweak_Na_lr.g  protodefs_tweak_sr.g  simplecell-g2.g  simplecell-g3.g  simplecell-h3-g2.g  simplecell-rand_act-g2.g  simplecell-rand_act-g3.g  simplecell_GKout-g3.g  simplecell_no_tweak_lr-g3.g  simplecell_no_tweak_lr-h3-g2.g  simplecell_pulsed-g2.g  simplecell_pulsed-g3.g  simplecell_spike_pulse.g  simplecell_tau-sy-g3.g  (+7 more)
tests/specifications/: 0_listobjects.t  addfield.t  conversions.t  copy.t  copy3.t  double.t  foreachloop.t  nesting.t  parameters.t  passive.t  pulsegen.t  purkinje.t  rallpacks.t  readcell.t  set_neurospaces_field.t  setclock.t  setfield.t  simplecell.t  simplecells.t  test1.t  traub91.t  traub94.t  traub95.t  version.t
(+192 files in other folders)
